samples/_failures_safe/1761418692_e7e692_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8d7b093.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_b8d7b093.c:177:9: error: expected declaration or statement at end of input
  177 |         }
      |         ^
./samples/SAFE/__tmp_b8d7b093.c:177:9: error: expected declaration or statement at end of input
